fix: change overflow property from scroll to auto in capability-strip

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -463,7 +463,7 @@ h2 em {
 }
 
 .capability-strip {
-  overflow: scroll;
+  overflow: auto;
   color: var(--white);
   background: var(--green);
 }
